--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.syme">
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -11,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Syme">
-        <activity android:name=".Registrarse"
-            android:theme="@style/Theme.Syme.NoActionBar"></activity>
+        <activity
+            android:name=".Registrarse"
+            android:theme="@style/Theme.Syme.NoActionBar" />
         <activity
             android:name=".Login"
             android:theme="@style/Theme.Syme.NoActionBar">
@@ -25,7 +24,10 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Syme.NoActionBar"></activity>
+            android:theme="@style/Theme.Syme.NoActionBar" />
     </application>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
