--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:theme="@style/Theme.Syme">
         <activity
             android:name=".Registrarse"
-            android:theme="@style/Theme.Syme.NoActionBar" />
+            android:theme="@style/Theme.Syme.NoActionBar">
+
+    </activity>
+
         <activity
             android:name=".Login"
             android:theme="@style/Theme.Syme.NoActionBar">
@@ -20,11 +23,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Syme.NoActionBar" />
+            android:theme="@style/Theme.Syme.NoActionBar" >
+
+    </activity>
     </application>
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
