--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,8 +32,15 @@ apply plugin: 'com.google.gms.google-services'
 
 dependencies {
 
-    implementation platform('com.google.firebase:firebase-bom:26.1.0')
-    implementation 'com.google.firebase:firebase-analytics'
+    // Import the BoM for the Firebase platform
+
+
+    // Declare the dependencies for the Firebase Cloud Messaging and Analytics libraries
+    // When using the BoM, you don't specify versions in Firebase library dependencies
+    implementation 'com.google.firebase:firebase-messaging:21.0.0'
+    implementation 'com.google.firebase:firebase-analytics:18.0.0'
+    implementation platform('com.google.firebase:firebase-bom:26.0.0')
+    implementation 'com.google.firebase:firebase-analytics:17.4.3'
     implementation 'com.firebaseui:firebase-ui-firestore:4.3.2'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
