--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Syme">
-        <activity android:name=".Mantenimiento"></activity>
+        <activity android:name=".EstadoDispositivos"></activity>
+        <activity android:name=".Mantenimiento" />
         <activity
             android:name=".Registrarse"
-            android:theme="@style/Theme.Syme.NoActionBar"></activity>
+            android:theme="@style/Theme.Syme.NoActionBar" />
         <activity
             android:name=".Login"
             android:theme="@style/Theme.Syme.NoActionBar">
@@ -25,7 +26,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Syme.NoActionBar"></activity> <!-- [START firebase_service] -->
+            android:theme="@style/Theme.Syme.NoActionBar" /> <!-- [START firebase_service] -->
         <service
             android:name=".MyFirebaseMessagingService"
             android:exported="false">
@@ -34,8 +35,8 @@
             </intent-filter>
         </service>
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
