--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Syme">
-        <activity android:name=".EstadoDispositivos"></activity>
-        <activity android:name=".Mantenimiento" />
+        <activity android:name=".EstadoDispositivos" android:configChanges="screenSize|orientation"/>
+        <activity android:name=".Mantenimiento" android:configChanges="screenSize|orientation"/>
         <activity
             android:name=".Registrarse"
-            android:theme="@style/Theme.Syme.NoActionBar" />
+            android:theme="@style/Theme.Syme.NoActionBar"
+            android:configChanges="screenSize|orientation"/>
         <activity
             android:name=".Login"
-            android:theme="@style/Theme.Syme.NoActionBar">
+            android:theme="@style/Theme.Syme.NoActionBar"
+            android:configChanges="screenSize|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,7 +28,8 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Syme.NoActionBar" /> <!-- [START firebase_service] -->
+            android:theme="@style/Theme.Syme.NoActionBar"
+            android:configChanges="screenSize|orientation"/> <!-- [START firebase_service] -->
         <service
             android:name=".MyFirebaseMessagingService"
             android:exported="false">
