--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,21 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Syme">
-        <activity android:name=".Ventas"></activity>
-        <activity
-            android:name=".EstadoDispositivos"
-            android:configChanges="screenSize|orientation" />
-        <activity
-            android:name=".Mantenimiento"
-            android:configChanges="screenSize|orientation" />
+        <activity android:name=".EstadoDispositivos" android:configChanges="screenSize|orientation"/>
+        <activity android:name=".Mantenimiento" android:configChanges="screenSize|orientation"/>
+        <activity android:name=".ResetearContrasenia"
+            />
+        <activity android:name=".Ventas"
+
+            android:configChanges="screenSize|orientation"/>
         <activity
             android:name=".Registrarse"
-            android:configChanges="screenSize|orientation"
-            android:theme="@style/Theme.Syme.NoActionBar" />
+            android:theme="@style/Theme.Syme.NoActionBar"
+            android:configChanges="screenSize|orientation"/>
         <activity
             android:name=".Login"
-            android:configChanges="screenSize|orientation"
-            android:theme="@style/Theme.Syme.NoActionBar">
+            android:theme="@style/Theme.Syme.NoActionBar"
+            android:configChanges="screenSize|orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,9 +32,9 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:configChanges="screenSize|orientation"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Syme.NoActionBar" /> <!-- [START firebase_service] -->
+            android:theme="@style/Theme.Syme.NoActionBar"
+            android:configChanges="screenSize|orientation"/> <!-- [START firebase_service] -->
         <service
             android:name=".MyFirebaseMessagingService"
             android:exported="false">
@@ -43,8 +43,8 @@
             </intent-filter>
         </service>
     </application>
-    <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
